--- a/front/userstory/package.json
+++ b/front/userstory/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
